# lexicographic-hotel-lco

./: .gitignore  CITATION.cff  LICENSE  LICENSE-Documentation.txt  README.md  pyproject.toml
data/: multi_hotel_chain_bookings.csv  synthetic_booking_scenarios_50.csv  synthetic_booking_scenarios_500.csv
notebooks/: LCO_Colab_Procedures.ipynb  LCO_Colab_Simulations.ipynb  LCO_Static_2Tier_Demo.ipynb  README.md
src/: pyomo_lco_mini.py  static_lco_model.py
